Add Assignment Alorithm iwht all its related objects. Adding configuration data and all its related objects, updating case, doctor, and patients objects